# OpenGLEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  camera.h  main.cpp  mesh.h  model.h  rebuild.bat  rebuild.sh  scene_manager.h  shader.h  test_callback.h
glad/include/glad/: glad.h
glad/src/: glad.c
models/: env_map.hdr
models/coast_rock/: coast_rock.mtl
models/cup/: cup.mtl
models/dumpsters/: dumpsters.mtl
models/plane/: simple_plane.mtl
models/table/: table.mtl
models/trash_bags/: trash_bags.mtl
shaders/: pbr.fs  pbr.vs  pbr_bkp.fs  shadow_depth.fs  skybox.fs  skybox.vs
